--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,14 @@
              <nav class="nav">
                  <a href="./index.html" class="logo"><span class="blue-logo"> Web</span>Studio </a>
                  <ul class="nav-list">  
-                     <li class="site-nav-item"><a class="item" href="./index.html" class="link">Студія</a></li>
-                     <li class="site-item"><a class="nav-item" href="./portfolio.html" class="link current"><span class="blue-logo">Портфоліо</span></a></li>
-                     <li class="site-item"><a class="item" href="./index.html" class="link"> Контакти</a></li>
+                     <li class="site-nav-item"><a class="item" href="./index.html">Студія</a></li>
+                     <li class="site-item"><a class="nav-item" href="./portfolio.html"><span class="blue-logo">Портфоліо</span></a></li>
+                     <li class="site-item"><a class="item" href="./index.html"> Контакти</a></li>
                  </ul>
              </nav>
              <ul class="info-list">
                  <li class="site-item-one">
-                     <a class="item-one" href="mailto:info@devstudio.com" class="link-info">
+                     <a class="item-one" href="mailto:info@devstudio.com" >
                         <svg class="icon-nav-one">
                              <use href="./images/icons.svg#icon-envelope"></use>
                          </svg>
@@ -32,7 +32,7 @@
                      </a>
                  </li>
                  <li class="site-item-one-info">
-                     <a class="item-one-info" href="tel:+380961111111" class="link-info">
+                     <a class="item-one-info" href="tel:+380961111111" >
                          <svg class="icon-nav-two">
                              <use href="./images/icons.svg#icon-Vector"></use>
                          </svg>
