--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                        <div class="modal-container-comments">
                          <label class="modal-comment" for="comment">Коментар</label>
-                             <textarea class="modal-text" name="comment" id="comment" rows="4" placeholder="Введіть текст"></textarea>
+                             <textarea class="modal-text" name="comment" id="comment" rows="4" cols="20" placeholder="Введіть текст"></textarea>
                        </div>
                         <div class="form-checkbox">
                          <label for="modal-checkbox" class="modal-link-accept">
@@ -98,9 +98,6 @@
                                      <span><a class="modal-link-terms" href="#">Умови договору</a></span>
                          </label>
                         </div>
-
-
-                        
                        <div class="modal-container-btn">
                          <button class="modal-btn-submit" type="submit">
                            Відправити
